force-app/main/default/objects/e_Invois_API__c/e_Invois_API__c.object-meta.xml
<CustomObject>
    <label>e Invois</label>
    <nameField>
        <label>e Invois  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>e Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>