force-app/main/default/objects/e_Invois_API__c/fields/e_Order_API__c.field-meta.xml
<CustomField>
    <fullName>e_Order_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>e Order</label>
    <referenceTo>e_Order_API__c</referenceTo>
    <relationshipLabel>e Invoices</relationshipLabel>
    <relationshipName>e_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>