force-app/main/default/objects/e_Invois_API__c/fields/idFormula_API__c.field-meta.xml
<CustomField>
    <fullName>idFormula_API__c</fullName>
    <formula>IF(RecordType.Id == &apos;0120R000000UzlF&apos;, true, false) || IF( RecordTypeId == &apos;0120R000000Uzgx&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>idFormula</label>
    <type>Checkbox</type>
</CustomField>