force-app/main/default/objects/e_Invois_API__c/fields/LookupToOrderRT_API__c.field-meta.xml
<CustomField>
    <fullName>LookupToOrderRT_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(#5312 automationMaster 19.5.0.0-SNAPSHOT-13302), 2 days 14 hr ago (#5312 automationMaster 19.5.0.0-SNAPSHOT-13302), 2 days 14 hr ago</description>
    <inlineHelpText>(#5312 automationMaster 19.5.0.0-SNAPSHOT-13302), 2 days 14 hr ago (#5312 automationMaster 19.5.0.0-SNAPSHOT-13302), 2 days 14 hr ago (#5312 automationMaster 19.5.0.0-SNAPSHOT-13302), 2 days 14 hr ago</inlineHelpText>
    <label>LookupToOrderRT</label>
    <referenceTo>e_Order_API__c</referenceTo>
    <relationshipLabel>e Invoices (LookupToOrderRT)</relationshipLabel>
    <relationshipName>e_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>