force-app/main/default/objects/e_Invois_API__c/fields/minimalLayout_API__c.field-meta.xml
<CustomField>
    <fullName>minimalLayout_API__c</fullName>
    <description>to different record type</description>
    <label>minimalLayout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>