force-app/main/default/objects/e_Invois_API__c/fields/RT_formula_API__c.field-meta.xml
<CustomField>
    <fullName>RT_formula_API__c</fullName>
    <formula>IF(RecordType.Name == &apos;Boom_API&apos;, true, false) ||
IF(RecordType.DeveloperName == &apos;esela&apos;, true, false) ||
IF( RecordType.Id == &apos;0120R000000Uzgx&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RT_formula</label>
    <type>Checkbox</type>
</CustomField>