force-app/main/default/objects/e_Invois_API__c/recordTypes/Behind_The_Wheel.recordType-meta.xml
<RecordType>
    <fullName>Behind_The_Wheel</fullName>
    <active>true</active>
    <label>Behind The Wheel</label>
</RecordType>