force-app/main/default/objects/e_Invois_API__c/recordTypes/boom_API.recordType-meta.xml
<RecordType>
    <fullName>boom_API</fullName>
    <active>true</active>
    <label>boom</label>
</RecordType>